@@ -2,6 +2,8 @@
 Added Basic support for Beans from Tim Stephenson
 CHanged MANIFEST.MF to adapt it to the last log4j
 Solved bug 769389, now NativeExec works on XP
+Adapted to jdk1.4.2 to solve finally nasty mess
+Solved a few Deprecation messages
 1.3
 Added org.jcrontab.log.NullLog
 Added ClassLoader.getResourceAsStream() from Sergey V. Udalstov
